mornitoring 서버 db 연동, copytrading 거래정보 전송 구현
