# ct_mornitoring/routes/v1/swagger/swagger.yaml
@@ -5,23 +5,15 @@ info:
   description: CT Mornitoring Server API DOCs
 
 servers:
-  - url: http://localhost:3000/v1
-  - url: http://localhost:3000
+  - url: http://localhost:3010/v1
+  - url: http://localhost:3010
 
 paths:
   /mornitoring:
     post:
       responses:
         200:
-          description: Oknp
-  /auth/login:
-    post:
-      tags:
-        - Auth
-      summary: 로그인
-      description: "로그인 (Test ID : Reabit)"
-      produces:
-        - application/json
+          description: Ok
       requestBody:
         description: Kakao OAuth 2.0 ID
         content:
@@ -33,66 +25,85 @@ paths:
                 publicId:
                   type: string
         required: true
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                description: JWT Token
-                properties:
-                  token:
-                    type: string
-  /publics:
-    post:
-      tags:
-        - Public
-      summary: 회원 정보 등록
-      description: 회원 정보 등록
-      produces:
-        - application/json
-      requestBody:
-        description: 회원 정보
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Public"
-        required: true
-      responses:
-        200:
-          description: OK
-        409:
-          description: 중복된 유저입니다.
-          content: {}
-    get:
-      tags:
-        - Public
-      summary: 회원 정보 조회
-      description: 회원 정보 조회
-      security:
-        - bearerAuth: []
-      produces:
-        - application/json
-      responses:
-        200:
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Public"
-    patch:
-      tags:
-        - Public
-      summary: 회원 정보 삭제 상태로 업데이트
-      description: 회원 정보 삭제 상태로 업데이트
-      security:
-        - bearerAuth: []
-      produces:
-        - application/json
-      responses:
-        200:
-          description: OK
+  # /auth/login:
+  #   post:
+  #     tags:
+  #       - Auth
+  #     summary: 로그인
+  #     description: "로그인 (Test ID : Reabit)"
+  #     produces:
+  #       - application/json
+  #     requestBody:
+  #       description: Kakao OAuth 2.0 ID
+  #       content:
+  #         application/json:
+  #           schema:
+  #             type: object
+  #             description: 사용자 ID
+  #             properties:
+  #               publicId:
+  #                 type: string
+  #       required: true
+  #     responses:
+  #       200:
+  #         description: OK
+  #         content:
+  #           application/json:
+  #             schema:
+  #               type: object
+  #               description: JWT Token
+  #               properties:
+  #                 token:
+  #                   type: string
+  # /publics:
+  #   post:
+  #     tags:
+  #       - Public
+  #     summary: 회원 정보 등록
+  #     description: 회원 정보 등록
+  #     produces:
+  #       - application/json
+  #     requestBody:
+  #       description: 회원 정보
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: "#/components/schemas/Public"
+  #       required: true
+  #     responses:
+  #       200:
+  #         description: OK
+  #       409:
+  #         description: 중복된 유저입니다.
+  #         content: {}
+  #   get:
+  #     tags:
+  #       - Public
+  #     summary: 회원 정보 조회
+  #     description: 회원 정보 조회
+  #     security:
+  #       - bearerAuth: []
+  #     produces:
+  #       - application/json
+  #     responses:
+  #       200:
+  #         description: OK
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/Public"
+  #   patch:
+  #     tags:
+  #       - Public
+  #     summary: 회원 정보 삭제 상태로 업데이트
+  #     description: 회원 정보 삭제 상태로 업데이트
+  #     security:
+  #       - bearerAuth: []
+  #     produces:
+  #       - application/json
+  #     responses:
+  #       200:
+  #         description: OK
 
 components:
   schemas:
